[package]
name = "toasty-sqlite"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
toasty-core = { path = "../../core" }

anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = { version = "0.8.10", optional = true }
r2d2_sqlite = {version ="0.25.0" , optional = true}
tokio = { version = "1.18", features = ["full"], optional = true}

# TODO: get rid of
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

[features]
default = ["r2d2_sqlite"]
r2d2_sqlite = ["dep:r2d2_sqlite", "dep:r2d2", "dep:tokio"]

